--- a/first-post.html
+++ b/first-post.html
@@ -44,7 +44,7 @@
         <p>In <a href="./category/information.html">Information</a>. </p>
 <p>tags: <a href="./tag/.html"></a></p>
 </footer><!-- /.post-info -->      <p>Why we create this website?
-iWhy should anyone care?</p>
+Why should anyone care?</p>
     </div><!-- /.entry-content -->
     
   </article>
