--- a/archives.html
+++ b/archives.html
@@ -21,15 +21,18 @@
         <header id="banner" class="body">
                 <h1><a href="./">EarthPy </a></h1>
                 <nav><ul>
-                                                                                                    <li ><a href="./category/information.html">Information</a></li>
+                                                                                                    <li ><a href="./category/data-processing.html">Data processing</a></li>
+                                    <li ><a href="./category/information.html">Information</a></li>
                                 </ul></nav>
         </header><!-- /#banner -->
         <section id="content" class="body">
 <h1>Archives for EarthPy</h1>
 
 <dl>
-    <dt>Thu 28 March 2013</dt>
+    <dt>Tue 28 March 2023</dt>
     <dd><a href="./first-post.html">First post</a></dd>
+    <dt>Sat 30 March 2013</dt>
+    <dd><a href="./pandas-basics.html">Time series analysis with pandas</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
