--- a/categories.html
+++ b/categories.html
@@ -21,10 +21,12 @@
         <header id="banner" class="body">
                 <h1><a href="./">EarthPy </a></h1>
                 <nav><ul>
-                                                                                                    <li ><a href="./category/information.html">Information</a></li>
+                                                                                                    <li ><a href="./category/data-processing.html">Data processing</a></li>
+                                    <li ><a href="./category/information.html">Information</a></li>
                                 </ul></nav>
         </header><!-- /#banner -->
         <ul>
+    <li><a href="./category/data-processing.html">Data processing</a></li>
     <li><a href="./category/information.html">Information</a></li>
 </ul>
         <section id="extras" class="body">
