plot with komod

--- a/archives.html
+++ b/archives.html
@@ -23,6 +23,7 @@
                 <nav><ul>
                                                                                                     <li ><a href="./category/data-processing.html">Data processing</a></li>
                                     <li ><a href="./category/information.html">Information</a></li>
+                                    <li ><a href="./category/visualization.html">Visualization</a></li>
                                 </ul></nav>
         </header><!-- /#banner -->
         <section id="content" class="body">
@@ -31,6 +32,8 @@
 <dl>
     <dt>Tue 28 March 2023</dt>
     <dd><a href="./first-post.html">First post</a></dd>
+    <dt>Sun 31 March 2013</dt>
+    <dd><a href="./komod-mitplot-drawmap.html">Plot maps with PyNGL and komod</a></dd>
     <dt>Sat 30 March 2013</dt>
     <dd><a href="./pandas-basics.html">Time series analysis with pandas</a></dd>
 </dl>
