--- a/categories.html
+++ b/categories.html
@@ -23,11 +23,13 @@
                 <nav><ul>
                                                                                                     <li ><a href="./category/data-processing.html">Data processing</a></li>
                                     <li ><a href="./category/information.html">Information</a></li>
+                                    <li ><a href="./category/visualization.html">Visualization</a></li>
                                 </ul></nav>
         </header><!-- /#banner -->
         <ul>
     <li><a href="./category/data-processing.html">Data processing</a></li>
     <li><a href="./category/information.html">Information</a></li>
+    <li><a href="./category/visualization.html">Visualization</a></li>
 </ul>
         <section id="extras" class="body">
                         <div class="blogroll">
