--- a/pandas-basics.html
+++ b/pandas-basics.html
@@ -23,6 +23,7 @@
                 <nav><ul>
                                                                                                     <li class="active"><a href="./category/data-processing.html">Data processing</a></li>
                                     <li ><a href="./category/information.html">Information</a></li>
+                                    <li ><a href="./category/visualization.html">Visualization</a></li>
                                 </ul></nav>
         </header><!-- /#banner -->
         <section id="content" class="body">
