--- a/archives.html
+++ b/archives.html
@@ -46,7 +46,15 @@
                                                     <li><a href="http://koldunov.net">koldunov.net (in Russian)</a></li>
                                                 </ul>
                 </div><!-- /.blogroll -->
-                        </section><!-- /#extras -->
+                                <div class="social">
+                        <h2>social</h2>
+                        <ul>
+                            <li><a href="http://earthpy.org/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            
+                                                    <li><a href="#"> </a></li>
+                                                </ul>
+                </div><!-- /.social -->
+                </section><!-- /#extras -->
 
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
