--- a/archives.html
+++ b/archives.html
@@ -31,7 +31,7 @@
 
 <dl>
     <dt>Tue 28 March 2023</dt>
-    <dd><a href="./first-post.html">About</a></dd>
+    <dd><a href="./first-post.html">About&nbsp;EarthPy</a></dd>
     <dt>Sun 31 March 2013</dt>
     <dd><a href="./komod-mitplot-drawmap.html">Plot maps with PyNGL and&nbsp;komod</a></dd>
     <dt>Sat 30 March 2013</dt>
