Plot grid and transect with PyNGL and komod

--- a/archives.html
+++ b/archives.html
@@ -32,6 +32,8 @@
 <dl>
     <dt>Tue 28 March 2023</dt>
     <dd><a href="./first-post.html">About&nbsp;EarthPy</a></dd>
+    <dt>Fri 19 April 2013</dt>
+    <dd><a href="./komod-mitplot-draw-transect.html">Plot grid and transect with PyNGL and&nbsp;komod</a></dd>
     <dt>Tue 16 April 2013</dt>
     <dd><a href="./ulmo.html">Climatology data access with&nbsp;ulmo</a></dd>
     <dt>Sun 31 March 2013</dt>
