add links to notebook files

--- a/index.html
+++ b/index.html
@@ -70,12 +70,13 @@
         <p>In <a href="./category/visualization.html">Visualization</a>. </p>
 <p>tags: <a href="./tag/komod.html">komod</a><a href="./tag/visualization.html">visualization</a><a href="./tag/pyngl.html">PyNGL</a></p>
 </footer><!-- /.post-info -->                <div class="ipynb"><div class="text_cell_render border-box-sizing rendered_html">
-<p>Task:</p>
+<p><strong>Task:</strong></p>
 <pre class="ipynb"><code>Draw a grid and a transect with PyNGL module
 </code></pre>
-<p>Solution:</p>
+<p><strong>Solution:</strong></p>
 <pre class="ipynb"><code>komod module
 </code></pre>
+<p><a href="https://raw.github.com/koldunovn/earthpy.org/master/content/earthpy_mitplot2.ipynb"><strong>Notebook&nbsp;file</strong></a></p>
 </div>
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>This is a short follow up of the <a href="http://earthpy.org/komod-mitplot-drawmap.html">previous post</a> about <a href="https://github.com/koldunovn/komod">komod module</a>, that is essentially a set of wrapper functions for <a href="http://www.pyngl.ucar.edu/">PyNGL module</a>. Here I am going to show how to plot a grid of your model and how to draw a transect. I am going to use the same data set af before: <a href="http://data.nodc.noaa.gov/thredds/fileServer/woa/WOA09/NetCDFdata/temperature_annual_5deg.nc">mean temperature from the World Ocean Atlas 2009</a> (5 deg.&nbsp;resolution).</p>
@@ -97,7 +98,7 @@
 </div>
 </div>
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Get variables from the ...</p></div></div>
+<p>Get variables ...</p></div></div>
                 <a class="readmore" href="./komod-mitplot-draw-transect.html">read more</a>
                 <p>There are <a href="./komod-mitplot-draw-transect.html#disqus_thread">comments</a>.</p>                </div><!-- /.entry-content -->
             </article></li>
@@ -122,16 +123,17 @@
         <p>In <a href="./category/data-processing.html">Data processing</a>. </p>
 <p>tags: <a href="./tag/pandas.html">pandas</a><a href="./tag/data-analysis.html">data analysis</a></p>
 </footer><!-- /.post-info -->                <div class="ipynb"><div class="text_cell_render border-box-sizing rendered_html">
-<p>Task:</p>
+<p><strong>Task:</strong></p>
 <pre class="ipynb"><code>easy access to climatology data
 </code></pre>
-<p>Solution:</p>
+<p><strong>Solution:</strong></p>
 <pre class="ipynb"><code>ulmo
 </code></pre>
+<p><a href="http://nbviewer.ipython.org/urls/raw.github.com/koldunovn/earthpy.org/master/content/ulmo.ipynb"><strong>Notebook&nbsp;file</strong></a></p>
 </div>
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>One of the main things that bothers me most at work is data conversion. World would be a much better place for somebody like me if everybody use netCDF file format for data distribution. While situation slightly changing, and more and more organisations switch to netCDF, there are still plenty of those who distribute their data in some crazy&nbsp;forms.</p>
-<p>Would it be nice if somebody once and for all create converters for all this formats and provide a way to directly search and access data from python? Imagine - instead of spending ...</p></div></div>
+<p>Would it be nice if somebody once and for all create converters for all this formats and provide a way to directly search and access data from python? Imagine - instead ...</p></div></div>
                 <a class="readmore" href="./ulmo.html">read more</a>
                 <p>There are <a href="./ulmo.html#disqus_thread">comments</a>.</p>                </div><!-- /.entry-content -->
             </article></li>
@@ -162,9 +164,10 @@
 <p><strong>Solution:</strong></p>
 <pre class="ipynb"><code>komod module
 </code></pre>
+<p><a href="http://nbviewer.ipython.org/urls/raw.github.com/koldunovn/earthpy.org/master/content/earthpy_mitplot.ipynb"><strong>Notebook&nbsp;file</strong></a></p>
 </div>
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>The PyNGL module produce very nice looking maps, and it&#8217;s capabilities in fine tuning the resulting image in many cases are much better compared to matplotlib Basemap module. However this flexibility come at a price: in order to draw a map of an acceptable appearance one has to write quite a long script, and specify many parameters. Of course once you find your &#8220;best ever&#8221; set of parameters, you basically copy/paste them from one script to another with only slight modifications. But at some point you get annoyed ...</p></div></div>
+<p>The PyNGL module produce very nice looking maps, and it&#8217;s capabilities in fine tuning the resulting image in many cases are much better compared to matplotlib Basemap module. However this flexibility come at a price: in order to draw a map of an acceptable appearance one has to write quite a long script, and specify many parameters. Of course once you find your &#8220;best ever&#8221; set of parameters, you basically copy/paste them from one script to another with only slight modifications. But at some point you ...</p></div></div>
                 <a class="readmore" href="./komod-mitplot-drawmap.html">read more</a>
                 <p>There are <a href="./komod-mitplot-drawmap.html#disqus_thread">comments</a>.</p>                </div><!-- /.entry-content -->
             </article></li>
@@ -195,10 +198,11 @@
 <p><strong>Modules</strong>:</p>
 <pre class="ipynb"><code>pandas
 </code></pre>
+<p><a href="http://nbviewer.ipython.org/urls/github.com/koldunovn/earthpy.org/raw/master/content/earthpy_pandas_basics.ipynb"><strong>Notebook&nbsp;file</strong></a>   </p>
 </div>
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>Here I am going to show just some basic <a href="http://pandas.pydata.org/">pandas</a> stuff for time series analysis, as I think for the Earth Scientists it&#8217;s the most interesting topic. If you find this small tutorial useful, I encourage you to watch <a href="http://pyvideo.org/video/1198/time-series-data-analysis-with-pandas">this video</a>, where Wes McKinney give extensive introduction to the time series data analysis with&nbsp;pandas.</p>
-<p>On the official website you can find explanation of what problems pandas solve in general, but I can tell you what problem pandas solve for me. It makes analysis and visualisation of 1D ...</p></div></div>
+<p>On the official website you can find explanation of what problems pandas solve in general, but I can tell you what problem pandas solve for me. It makes analysis and visualisation ...</p></div></div>
                 <a class="readmore" href="./pandas-basics.html">read more</a>
                 <p>There are <a href="./pandas-basics.html#disqus_thread">comments</a>.</p>                </div><!-- /.entry-content -->
             </article></li>
