--- a/komod-mitplot-draw-transect.html
+++ b/komod-mitplot-draw-transect.html
@@ -46,12 +46,13 @@
         <p>In <a href="./category/visualization.html">Visualization</a>. </p>
 <p>tags: <a href="./tag/komod.html">komod</a><a href="./tag/visualization.html">visualization</a><a href="./tag/pyngl.html">PyNGL</a></p>
 </footer><!-- /.post-info -->      <div class="ipynb"><div class="text_cell_render border-box-sizing rendered_html">
-<p>Task:</p>
+<p><strong>Task:</strong></p>
 <pre class="ipynb"><code>Draw a grid and a transect with PyNGL module
 </code></pre>
-<p>Solution:</p>
+<p><strong>Solution:</strong></p>
 <pre class="ipynb"><code>komod module
 </code></pre>
+<p><a href="https://raw.github.com/koldunovn/earthpy.org/master/content/earthpy_mitplot2.ipynb"><strong>Notebook&nbsp;file</strong></a></p>
 </div>
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>This is a short follow up of the <a href="http://earthpy.org/komod-mitplot-drawmap.html">previous post</a> about <a href="https://github.com/koldunovn/komod">komod module</a>, that is essentially a set of wrapper functions for <a href="http://www.pyngl.ucar.edu/">PyNGL module</a>. Here I am going to show how to plot a grid of your model and how to draw a transect. I am going to use the same data set af before: <a href="http://data.nodc.noaa.gov/thredds/fileServer/woa/WOA09/NetCDFdata/temperature_annual_5deg.nc">mean temperature from the World Ocean Atlas 2009</a> (5 deg.&nbsp;resolution).</p>
