--- a/pandas-basics.html
+++ b/pandas-basics.html
@@ -52,6 +52,7 @@
 <p><strong>Modules</strong>:</p>
 <pre class="ipynb"><code>pandas
 </code></pre>
+<p><a href="http://nbviewer.ipython.org/urls/github.com/koldunovn/earthpy.org/raw/master/content/earthpy_pandas_basics.ipynb"><strong>Notebook&nbsp;file</strong></a>   </p>
 </div>
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>Here I am going to show just some basic <a href="http://pandas.pydata.org/">pandas</a> stuff for time series analysis, as I think for the Earth Scientists it&#8217;s the most interesting topic. If you find this small tutorial useful, I encourage you to watch <a href="http://pyvideo.org/video/1198/time-series-data-analysis-with-pandas">this video</a>, where Wes McKinney give extensive introduction to the time series data analysis with&nbsp;pandas.</p>
