--- a/ulmo.html
+++ b/ulmo.html
@@ -46,12 +46,13 @@
         <p>In <a href="./category/data-processing.html">Data processing</a>. </p>
 <p>tags: <a href="./tag/pandas.html">pandas</a><a href="./tag/data-analysis.html">data analysis</a></p>
 </footer><!-- /.post-info -->      <div class="ipynb"><div class="text_cell_render border-box-sizing rendered_html">
-<p>Task:</p>
+<p><strong>Task:</strong></p>
 <pre class="ipynb"><code>easy access to climatology data
 </code></pre>
-<p>Solution:</p>
+<p><strong>Solution:</strong></p>
 <pre class="ipynb"><code>ulmo
 </code></pre>
+<p><a href="http://nbviewer.ipython.org/urls/raw.github.com/koldunovn/earthpy.org/master/content/ulmo.ipynb"><strong>Notebook&nbsp;file</strong></a></p>
 </div>
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>One of the main things that bothers me most at work is data conversion. World would be a much better place for somebody like me if everybody use netCDF file format for data distribution. While situation slightly changing, and more and more organisations switch to netCDF, there are still plenty of those who distribute their data in some crazy&nbsp;forms.</p>
