--- a/komod-mitplot-drawmap.html
+++ b/komod-mitplot-drawmap.html
@@ -52,6 +52,7 @@
 <p><strong>Solution:</strong></p>
 <pre class="ipynb"><code>komod module
 </code></pre>
+<p><a href="http://nbviewer.ipython.org/urls/raw.github.com/koldunovn/earthpy.org/master/content/earthpy_mitplot.ipynb"><strong>Notebook&nbsp;file</strong></a></p>
 </div>
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>The PyNGL module produce very nice looking maps, and it&#8217;s capabilities in fine tuning the resulting image in many cases are much better compared to matplotlib Basemap module. However this flexibility come at a price: in order to draw a map of an acceptable appearance one has to write quite a long script, and specify many parameters. Of course once you find your &#8220;best ever&#8221; set of parameters, you basically copy/paste them from one script to another with only slight modifications. But at some point you get annoyed by this long sheets of code, that by the way do not look very nice in IPython notebooks, and you write a wrapper&nbsp;function.</p>
