--- a/archives.html
+++ b/archives.html
@@ -32,6 +32,8 @@
 <dl>
     <dt>Tue 28 March 2023</dt>
     <dd><a href="./first-post.html">About&nbsp;EarthPy</a></dd>
+    <dt>Sat 29 June 2013</dt>
+    <dd><a href="./earthpy-basemap-amazon.html">Use of Basemap for Amazon river discharge&nbsp;visualization</a></dd>
     <dt>Fri 19 April 2013</dt>
     <dd><a href="./komod-mitplot-draw-transect.html">Plot grid and transect with PyNGL and&nbsp;komod</a></dd>
     <dt>Tue 16 April 2013</dt>
