add Analyzing whale tracks

--- a/archives.html
+++ b/archives.html
@@ -1727,6 +1727,8 @@ init_mathjax();
 <dl>
     <dt>Di 28 März 2023</dt>
     <dd><a href="http://earthpy.org/first-post.html">About EarthPy</a></dd>
+    <dt>Mo 23 September 2013</dt>
+    <dd><a href="http://earthpy.org/analyzing-whale-tracks.html">Analyzing whale tracks</a></dd>
     <dt>Sa 29 Juni 2013</dt>
     <dd><a href="http://earthpy.org/earthpy-basemap-amazon.html">Use of Basemap for Amazon river discharge visualization</a></dd>
     <dt>Fr 19 April 2013</dt>
