--- a/authors.html
+++ b/authors.html
@@ -1724,6 +1724,7 @@ init_mathjax();
 
 <section id="content" class="body">
     <h1>Authors on EarthPy</h1>        <li><a href="http://earthpy.org/author/nikolay-koldunov.html">Nikolay Koldunov</a> (6)</li>
+        <li><a href="http://earthpy.org/author/rob-de-almeida.html">Rob De Almeida</a> (1)</li>
 </section>
 
         <section id="extras" class="body">
