--- a/tags.html
+++ b/tags.html
@@ -1724,12 +1724,14 @@ init_mathjax();
 
 <section id="content" class="body">
     <h1>Tags for EarthPy</h1>        <li><a href="http://earthpy.org/tag/.html"></a> (1)</li>
-        <li><a href="http://earthpy.org/tag/basemap-matplotlib-visualization.html">basemap matplotlib visualization</a> (1)</li>
-        <li><a href="http://earthpy.org/tag/data-analysis.html">data analysis</a> (1)</li>
-        <li><a href="http://earthpy.org/tag/komod-visualization-pyngl.html">komod visualization PyNGL</a> (2)</li>
-        <li><a href="http://earthpy.org/tag/pandas.html">pandas</a> (1)</li>
-        <li><a href="http://earthpy.org/tag/pandas-data-analysis.html">pandas data analysis</a> (1)</li>
-        <li><a href="http://earthpy.org/tag/visualization.html">visualization</a> (1)</li>
+        <li><a href="http://earthpy.org/tag/basemap.html">basemap</a> (1)</li>
+        <li><a href="http://earthpy.org/tag/data-analysis.html">data analysis</a> (3)</li>
+        <li><a href="http://earthpy.org/tag/komod.html">komod</a> (2)</li>
+        <li><a href="http://earthpy.org/tag/marinexplore.html">marinexplore</a> (1)</li>
+        <li><a href="http://earthpy.org/tag/matplotlib.html">matplotlib</a> (1)</li>
+        <li><a href="http://earthpy.org/tag/pandas.html">pandas</a> (2)</li>
+        <li><a href="http://earthpy.org/tag/pyngl.html">PyNGL</a> (2)</li>
+        <li><a href="http://earthpy.org/tag/visualization.html">visualization</a> (4)</li>
 </section>
 
         <section id="extras" class="body">
