--- a/ulmo.html
+++ b/ulmo.html
@@ -1739,7 +1739,7 @@ init_mathjax();
                 By <a class="url fn" href="http://earthpy.org/author/nikolay-koldunov.html">Nikolay Koldunov</a>
         </address>
 <p>In <a href="http://earthpy.org/category/data-processing.html">Data processing</a>. </p>
-<p>tags: <a href="http://earthpy.org/tag/pandas-data-analysis.html">pandas data analysis</a></p>
+<p>tags: <a href="http://earthpy.org/tag/pandas.html">pandas</a><a href="http://earthpy.org/tag/data-analysis.html">data analysis</a></p>
 </footer><!-- /.post-info -->      <p>
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>Task:</strong></p>
