--- a/earthpy-basemap-amazon.html
+++ b/earthpy-basemap-amazon.html
@@ -1739,7 +1739,7 @@ init_mathjax();
                 By <a class="url fn" href="http://earthpy.org/author/nikolay-koldunov.html">Nikolay Koldunov</a>
         </address>
 <p>In <a href="http://earthpy.org/category/visualization.html">Visualization</a>. </p>
-<p>tags: <a href="http://earthpy.org/tag/basemap-matplotlib-visualization.html">basemap matplotlib visualization</a></p>
+<p>tags: <a href="http://earthpy.org/tag/basemap.html">basemap</a><a href="http://earthpy.org/tag/matplotlib.html">matplotlib</a><a href="http://earthpy.org/tag/visualization.html">visualization</a></p>
 </footer><!-- /.post-info -->      <p>
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>Task:</strong></p>
