--- a/komod-mitplot-draw-transect.html
+++ b/komod-mitplot-draw-transect.html
@@ -1739,7 +1739,7 @@ init_mathjax();
                 By <a class="url fn" href="http://earthpy.org/author/nikolay-koldunov.html">Nikolay Koldunov</a>
         </address>
 <p>In <a href="http://earthpy.org/category/visualization.html">Visualization</a>. </p>
-<p>tags: <a href="http://earthpy.org/tag/komod-visualization-pyngl.html">komod visualization PyNGL</a></p>
+<p>tags: <a href="http://earthpy.org/tag/komod.html">komod</a><a href="http://earthpy.org/tag/visualization.html">visualization</a><a href="http://earthpy.org/tag/pyngl.html">PyNGL</a></p>
 </footer><!-- /.post-info -->      <p>
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>Task:</strong></p>
