add Python for Geosciences

--- a/archives.html
+++ b/archives.html
@@ -17,6 +17,7 @@
                 <nav><ul>
                     <li><a href="http://earthpy.org/category/data-processing.html">Data processing</a></li>
                     <li><a href="http://earthpy.org/category/information.html">Information</a></li>
+                    <li><a href="http://earthpy.org/category/introduction-to-python.html">Introduction to Python</a></li>
                     <li><a href="http://earthpy.org/category/visualization.html">Visualization</a></li>
                 </ul></nav>
  
@@ -1727,6 +1728,22 @@ init_mathjax();
 <dl>
     <dt>Di 28 März 2023</dt>
     <dd><a href="http://earthpy.org/first-post.html">About EarthPy</a></dd>
+    <dt>So 27 Oktober 2013</dt>
+    <dd><a href="http://earthpy.org/00_why_python.html">00 - Why Python?</a></dd>
+    <dt>So 27 Oktober 2013</dt>
+    <dd><a href="http://earthpy.org/01_scientific_modules_and_ipython.html">01 Scientific modules and IPython</a></dd>
+    <dt>So 27 Oktober 2013</dt>
+    <dd><a href="http://earthpy.org/02_python_basics.html">02 Python basics</a></dd>
+    <dt>So 27 Oktober 2013</dt>
+    <dd><a href="http://earthpy.org/03_numpy_arrays.html">03 NumPy arrays</a></dd>
+    <dt>So 27 Oktober 2013</dt>
+    <dd><a href="http://earthpy.org/04_work_with_different_data_formats.html">04 Work with different data formats</a></dd>
+    <dt>So 27 Oktober 2013</dt>
+    <dd><a href="http://earthpy.org/05_Graphs_and_maps_Matplotlib_and_Basemap.html">05 Graphs and maps (Matplotlib and Basemap)</a></dd>
+    <dt>So 27 Oktober 2013</dt>
+    <dd><a href="http://earthpy.org/07_Other_modules_for_geoscientists.html">07 Other modules for geoscientists</a></dd>
+    <dt>So 27 Oktober 2013</dt>
+    <dd><a href="http://earthpy.org/links.html">Links</a></dd>
     <dt>Mo 23 September 2013</dt>
     <dd><a href="http://earthpy.org/analyzing-whale-tracks.html">Analyzing whale tracks</a></dd>
     <dt>Sa 29 Juni 2013</dt>
