--- a/authors.html
+++ b/authors.html
@@ -17,6 +17,7 @@
                 <nav><ul>
                     <li><a href="http://earthpy.org/category/data-processing.html">Data processing</a></li>
                     <li><a href="http://earthpy.org/category/information.html">Information</a></li>
+                    <li><a href="http://earthpy.org/category/introduction-to-python.html">Introduction to Python</a></li>
                     <li><a href="http://earthpy.org/category/visualization.html">Visualization</a></li>
                 </ul></nav>
  
@@ -1723,7 +1724,7 @@ init_mathjax();
          </header><!-- /#banner -->
 
 <section id="content" class="body">
-    <h1>Authors on EarthPy</h1>        <li><a href="http://earthpy.org/author/nikolay-koldunov.html">Nikolay Koldunov</a> (6)</li>
+    <h1>Authors on EarthPy</h1>        <li><a href="http://earthpy.org/author/nikolay-koldunov.html">Nikolay Koldunov</a> (14)</li>
         <li><a href="http://earthpy.org/author/rob-de-almeida.html">Rob De Almeida</a> (1)</li>
 </section>
 
