--- a/tags.html
+++ b/tags.html
@@ -17,6 +17,7 @@
                 <nav><ul>
                     <li><a href="http://earthpy.org/category/data-processing.html">Data processing</a></li>
                     <li><a href="http://earthpy.org/category/information.html">Information</a></li>
+                    <li><a href="http://earthpy.org/category/introduction-to-python.html">Introduction to Python</a></li>
                     <li><a href="http://earthpy.org/category/visualization.html">Visualization</a></li>
                 </ul></nav>
  
@@ -1731,6 +1732,7 @@ init_mathjax();
         <li><a href="http://earthpy.org/tag/matplotlib.html">matplotlib</a> (1)</li>
         <li><a href="http://earthpy.org/tag/pandas.html">pandas</a> (2)</li>
         <li><a href="http://earthpy.org/tag/pyngl.html">PyNGL</a> (2)</li>
+        <li><a href="http://earthpy.org/tag/python-for-geosciences.html">python for geosciences</a> (8)</li>
         <li><a href="http://earthpy.org/tag/visualization.html">visualization</a> (4)</li>
 </section>
 
