--- a/07_Other_modules_for_geoscientists.html
+++ b/07_Other_modules_for_geoscientists.html
@@ -13975,6 +13975,8 @@ gEHblC2GeFYAAAAASUVORK5CYII=
                         <ul>
                             <li><a href="http://pyaos.johnny-lin.com/">Python for the Atmospheric and Oceanic Sciences</a></li>
                             <li><a href="http://koldunov.net">koldunov.net (in Russian)</a></li>
+                            <li><a href="oceanpython.org ">OceanPython.org</a></li>
+                            <li><a href="http://ocefpaf.github.io/">python4oceanographers</a></li>
                         </ul>
                 </div><!-- /.blogroll -->
                 <div class="social">
