--- a/index.html
+++ b/index.html
@@ -2570,6 +2570,8 @@ In&nbsp;[2]:
                         <ul>
                             <li><a href="http://pyaos.johnny-lin.com/">Python for the Atmospheric and Oceanic Sciences</a></li>
                             <li><a href="http://koldunov.net">koldunov.net (in Russian)</a></li>
+                            <li><a href="oceanpython.org ">OceanPython.org</a></li>
+                            <li><a href="http://ocefpaf.github.io/">python4oceanographers</a></li>
                         </ul>
                 </div><!-- /.blogroll -->
                 <div class="social">
