Near realtime data from Arctic ice mass balance buoys

--- a/archives.html
+++ b/archives.html
@@ -1728,6 +1728,8 @@ init_mathjax();
 <dl>
     <dt>Di 28 März 2023</dt>
     <dd><a href="http://earthpy.org/first-post.html">About EarthPy</a></dd>
+    <dt>Mo 25 November 2013</dt>
+    <dd><a href="http://earthpy.org/near_realtime_data_from_arctic_ice_mass_balance_buoys.html">Near realtime data from Arctic ice mass balance buoys</a></dd>
     <dt>Sa 23 November 2013</dt>
     <dd><a href="http://earthpy.org/interpolation_between_grids_with_basemap.html">Interpolation between grids with Basemap</a></dd>
     <dt>So 27 Oktober 2013</dt>
