--- a/komod-mitplot-drawmap.html
+++ b/komod-mitplot-drawmap.html
@@ -29704,7 +29704,7 @@ AAAASUVORK5CYII=
                         <ul>
                             <li><a href="http://pyaos.johnny-lin.com/">Python for the Atmospheric and Oceanic Sciences</a></li>
                             <li><a href="http://koldunov.net">koldunov.net (in Russian)</a></li>
-                            <li><a href="oceanpython.org ">OceanPython.org</a></li>
+                            <li><a href="http://oceanpython.org ">OceanPython.org</a></li>
                             <li><a href="http://ocefpaf.github.io/">python4oceanographers</a></li>
                         </ul>
                 </div><!-- /.blogroll -->
