--- a/links.html
+++ b/links.html
@@ -1787,6 +1787,9 @@ init_mathjax();
 </div>
 
 <div class="text_cell_render border-box-sizing rendered_html">
+<p><a href="http://shop.oreilly.com/product/0636920023784.do">Python for Data Analysis</a> - Data Wrangling with Pandas, NumPy, and IPython</p>
+</div>
+<div class="text_cell_render border-box-sizing rendered_html">
 <p><a href="http://www.springer.com/mathematics/computational+science+%26+engineering/book/978-3-540-73915-9">Python Scripting for Computational Science</a></p>
 </div>
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -1864,7 +1867,7 @@ init_mathjax();
                         <ul>
                             <li><a href="http://pyaos.johnny-lin.com/">Python for the Atmospheric and Oceanic Sciences</a></li>
                             <li><a href="http://koldunov.net">koldunov.net (in Russian)</a></li>
-                            <li><a href="oceanpython.org ">OceanPython.org</a></li>
+                            <li><a href="http://oceanpython.org ">OceanPython.org</a></li>
                             <li><a href="http://ocefpaf.github.io/">python4oceanographers</a></li>
                         </ul>
                 </div><!-- /.blogroll -->
