add Interpolation between grids with cKDTree

--- a/authors.html
+++ b/authors.html
@@ -1726,6 +1726,7 @@ init_mathjax();
 <section id="content" class="body">
     <h1>Authors on EarthPy</h1>        <li><a href="http://earthpy.org/author/arcticio.html">Arcticio</a> (1)</li>
         <li><a href="http://earthpy.org/author/nikolay-koldunov.html">Nikolay Koldunov</a> (15)</li>
+        <li><a href="http://earthpy.org/author/oleksandr-huziy.html">Oleksandr Huziy</a> (1)</li>
         <li><a href="http://earthpy.org/author/rob-de-almeida.html">Rob De Almeida</a> (1)</li>
 </section>
 
@@ -1772,7 +1773,7 @@ init_mathjax();
     (function () {
         var s = document.createElement('script'); s.async = true;
         s.type = 'text/javascript';
-        s.src = 'http://' + disqus_shortname + '.disqus.com/count.js';
+        s.src = '//' + disqus_shortname + '.disqus.com/count.js';
         (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
     }());
 </script>
