--- a/tags.html
+++ b/tags.html
@@ -1730,10 +1730,11 @@ init_mathjax();
         <li><a href="http://earthpy.org/tag/data-analysis.html">data analysis</a> (3)</li>
         <li><a href="http://earthpy.org/tag/komod.html">komod</a> (2)</li>
         <li><a href="http://earthpy.org/tag/marinexplore.html">marinexplore</a> (1)</li>
-        <li><a href="http://earthpy.org/tag/matplotlib.html">matplotlib</a> (3)</li>
+        <li><a href="http://earthpy.org/tag/matplotlib.html">matplotlib</a> (4)</li>
         <li><a href="http://earthpy.org/tag/pandas.html">pandas</a> (2)</li>
         <li><a href="http://earthpy.org/tag/pyngl.html">PyNGL</a> (2)</li>
         <li><a href="http://earthpy.org/tag/python-for-geosciences.html">python for geosciences</a> (8)</li>
+        <li><a href="http://earthpy.org/tag/scipy.html">scipy</a> (1)</li>
         <li><a href="http://earthpy.org/tag/visualization.html">visualization</a> (4)</li>
 </section>
 
@@ -1780,7 +1781,7 @@ init_mathjax();
     (function () {
         var s = document.createElement('script'); s.async = true;
         s.type = 'text/javascript';
-        s.src = 'http://' + disqus_shortname + '.disqus.com/count.js';
+        s.src = '//' + disqus_shortname + '.disqus.com/count.js';
         (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
     }());
 </script>
