--- a/authors.html
+++ b/authors.html
@@ -1728,6 +1728,7 @@ init_mathjax();
         <li><a href="http://earthpy.org/author/nikolay-koldunov.html">Nikolay Koldunov</a> (15)</li>
         <li><a href="http://earthpy.org/author/oleksandr-huziy.html">Oleksandr Huziy</a> (1)</li>
         <li><a href="http://earthpy.org/author/rob-de-almeida.html">Rob De Almeida</a> (1)</li>
+        <li><a href="http://earthpy.org/author/thomas-lavergne.html">Thomas Lavergne</a> (1)</li>
 </section>
 
         <section id="extras" class="body">
