--- a/interpolation_between_grids_with_pyresample.html
+++ b/interpolation_between_grids_with_pyresample.html
@@ -2000,7 +2000,7 @@ In&nbsp;[14]:
 
 </div>
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Now let us plot the results from these two approaches. We use imshow() that does not introduce additional interpolation.</p>
+<p>Now let us plot the results from these three approaches. We use imshow() that does not introduce additional interpolation.</p>
 </div>
 <div class="cell border-box-sizing code_cell vbox">
 <div class="input hbox">
