SMOS sea ice thickness

--- a/archives.html
+++ b/archives.html
@@ -1728,6 +1728,8 @@ init_mathjax();
 <dl>
     <dt>Di 28 März 2023</dt>
     <dd><a href="http://earthpy.org/first-post.html">About EarthPy</a></dd>
+    <dt>Mi 05 März 2014</dt>
+    <dd><a href="http://earthpy.org/smos_sea_ice_thickness.html">SMOS sea ice thickness</a></dd>
     <dt>Di 14 Januar 2014</dt>
     <dd><a href="http://earthpy.org/northern_cryosphere_metrics_rendered_with_colors.html">Northern Cryosphere Metrics rendered with Colors</a></dd>
     <dt>Di 10 Dezember 2013</dt>
