--- a/authors.html
+++ b/authors.html
@@ -1725,6 +1725,7 @@ init_mathjax();
 
 <section id="content" class="body">
     <h1>Authors on EarthPy</h1>        <li><a href="http://earthpy.org/author/arcticio.html">Arcticio</a> (2)</li>
+        <li><a href="http://earthpy.org/author/lars-kaleschke.html">Lars Kaleschke</a> (1)</li>
         <li><a href="http://earthpy.org/author/nikolay-koldunov.html">Nikolay Koldunov</a> (15)</li>
         <li><a href="http://earthpy.org/author/oleksandr-huziy.html">Oleksandr Huziy</a> (1)</li>
         <li><a href="http://earthpy.org/author/rob-de-almeida.html">Rob De Almeida</a> (1)</li>
