--- a/archives.html
+++ b/archives.html
@@ -1728,6 +1728,8 @@ init_mathjax();
 <dl>
     <dt>Di 28 März 2023</dt>
     <dd><a href="http://earthpy.org/first-post.html">About EarthPy</a></dd>
+    <dt>Sa 15 März 2014</dt>
+    <dd><a href="http://earthpy.org/time_series_analysis_with_pandas_part_2.html">Time series analysis with pandas. Part 2</a></dd>
     <dt>Mi 05 März 2014</dt>
     <dd><a href="http://earthpy.org/smos_sea_ice_thickness.html">SMOS sea ice thickness</a></dd>
     <dt>Di 14 Januar 2014</dt>
