--- a/tags.html
+++ b/tags.html
@@ -1728,10 +1728,11 @@ init_mathjax();
         <li><a href="http://earthpy.org/tag/arctic.html">Arctic</a> (2)</li>
         <li><a href="http://earthpy.org/tag/basemap.html">basemap</a> (4)</li>
         <li><a href="http://earthpy.org/tag/data-analysis.html">data analysis</a> (3)</li>
+        <li><a href="http://earthpy.org/tag/ipython.html">IPython</a> (1)</li>
         <li><a href="http://earthpy.org/tag/komod.html">komod</a> (2)</li>
         <li><a href="http://earthpy.org/tag/marinexplore.html">marinexplore</a> (1)</li>
         <li><a href="http://earthpy.org/tag/matplotlib.html">matplotlib</a> (5)</li>
-        <li><a href="http://earthpy.org/tag/pandas.html">pandas</a> (2)</li>
+        <li><a href="http://earthpy.org/tag/pandas.html">pandas</a> (3)</li>
         <li><a href="http://earthpy.org/tag/pydap.html">pydap</a> (1)</li>
         <li><a href="http://earthpy.org/tag/pyngl.html">PyNGL</a> (2)</li>
         <li><a href="http://earthpy.org/tag/pyresample.html">pyresample</a> (1)</li>
