--- a/archives.html
+++ b/archives.html
@@ -1728,6 +1728,8 @@ init_mathjax();
 <dl>
     <dt>Di 28 März 2023</dt>
     <dd><a href="http://earthpy.org/first-post.html">About EarthPy</a></dd>
+    <dt>Sa 14 Februar 2015</dt>
+    <dd><a href="http://earthpy.org/seaborn_library.html">Seaborn library</a></dd>
     <dt>Sa 12 April 2014</dt>
     <dd><a href="http://earthpy.org/pyncview_pm.html">IPyhton interact and widgets (or how to write python version of ncview in about 3 lines of code)</a></dd>
     <dt>Sa 15 März 2014</dt>
